k8s/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: xman-vsvc
spec:
  hosts:
    - "*"
  gateways:
    - xman-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: http-xman-svc
            port:
              number: 80
